<resources>
    <string name="app_name">CarApp</string>
    <string name="simple_text">Привет Команда! Let\'s Rock!)</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="logo_name">TRIC</string>
    <string name="logo_name_bottom">Tuning. Repair. Install. Care.</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="google">Google</string>
    <string name="enter_account_from_reset">Войти в аккаунт</string>
    <string name="login">Войти</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="or">или</string>
    <string name="create_account">Создайте аккаунт</string>
    <string name="create_account_textView">Создай свой аккаунт</string>
    <string name="nickname">nickname</string>
    <string name="logotype">logotype</string>
    <string name="create_account_text">Создать аккаунт</string>
    <string name="have_an_account">Уже есть учетная запись?</string>
    <string name="back_button">Back button</string>
    <string name="fill_data_registration_step2">Сперва введите Ваше имя для продолжения</string>
    <string name="your_first_name">Введите имя</string>
    <string name="your_last_name">Введите фамилию</string>
    <string name="your_telephone_number">Ваш номер телефона +7</string>
    <string name="hint_text_reg_step2">Эти данные будут отображаться в твоём профиле</string>
    <string name="next">Далее</string>
    <string name="reset_password_manual">Сменить пароль</string>
    <string name="choose_a_photo_from_phone">Выберите фотографию для отображения</string>
    <string name="photo_from_gallery">Взять фото из галереи</string>
    <string name="take_photo">Сделать фото</string>
    <string name="set_your_location">Установите Ваше местоположение</string>
    <string name="location_reg_hint">Выбранное Вами местоположение будет определять подходящие Вам организации</string>
    <string name="set_location">Установить местоположение</string>
    <string name="congrats_in_registration">Поздравляем тебя!</string>
    <string name="account_is_ready">Ваш аккаунт готов к применению</string>
    <string name="to_my_account">В мой аккаунт</string>
    <string name="type_of_account">Выберите характер Вашего аккаунта</string>
    <string name="hint_of_account_type">Тип аккаунта будет определять подходящий Вам функционал. Если выбираете
    "Личный аккаунт", то можете воспользоваться поиском компаний. Если же "Компания", то Вам будет присвоин тип
    организации, и Вы сможете предлагать свои услуги или товары другим пользователям</string>
    <string name="personal_account">Личный аккаунт</string>
    <string name="company_account">Аккаунт организации</string>
    <string name="top_tw_main_user_fragment">Найдите Достойный Сервис и Автотовары</string>
    <string name="companies_near">Компании рядом с вами</string>
    <string name="company_logo">Company_logo</string>
    <string name="best_companies_in_your_location">Лучшие компании в Вашем регионе</string>
    <string name="popular_services_of_companies_tw">Популярные услуги компаний</string>
    <string name="best_deals_of_companies">Лучшие предложения компаний</string>
    <string name="my_services_company_main">Мои услуги</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_beginning">Начало</string>
    <string name="menu_request">Запрос</string>
    <string name="menu_map">Карта</string>
    <string name="menu_more">Ещё</string>
    <string name="my_profile_fragment_tw">Мой профиль:</string>
    <string name="create_request_tw">Создать запрос на услугу</string>
    <string name="hint_request_tw">Здесь Вы можете создать запрос на необходимую услугу. Это увидят компании и сделают вам своё предложение</string>
    <string name="person_map_tw">Компании на карте</string>
    <string name="more_menu_main_tw">Дополнительно:</string>
    <string name="menu_more_settings">Настройки</string>
    <string name="my_top_services">Мой Топ</string>
    <string name="history_search_tw">История поиска</string>
    <string name="share_with_friends">Поделиться с друзьями</string>
    <string name="share_link">Отправить ссылку на приложение</string>
    <string name="company_announce_tw">Создать объявление</string>
    <string name="company_announce_hint_tw">Здесь создаются и отображаются все ваши объявления, которые будут видны нуждающимся в них автовладельцам</string>
    <string name="adding_an_announcement">Adding an announcement</string>
    <string name="profile_organisation">Профиль</string>
    <string name="organisation_announcements">Объявления</string>
    <string name="clients_announcements">Объявления автовладельцев</string>
    <string name="hint_find_clients">Тут отображаются все услуги или товары, которые необходимы автовладельцам. Вы можете перейти в понравившееся объявление и предложить свою цену</string>
    <string name="clients_announcements_company">Клиенты</string>
    <string name="find_client">Найти</string>
    <string name="find_your_client_main_tw">Найти своего клиента</string>
    <string name="find_your_client_hint_tw">Тут вы можете осуществить подбор того клиента по параметрам, который нужен именно вам</string>

    <string name="valid_email">Проверьте корректность Вашего email</string>
    <string name="not_empty_email_password">Проверьте введенные данные. Все поля обязательны для заполнения!</string>
    <string name="valid_password">Проверьте длину пароля! Минимальная длина 8 символов</string>
    <string name="failed_confirm_password">Пароли не совпадают! Проверьте</string>
    <string name="valid_phone">Проверьте номер телефона!</string>
    <string name="access_internet">Проверьте введенные данные. Возможно нет интернета</string>
    <string name="access_failed">Ошибка обновления данных профиля. Возможно нет интернета</string>
    <string name="approve_by_email">Вам отправлена ссылка на Email для восстановления пароля!</string>
    <string name="approve_password">Ваш пароль изменен!</string>
    <string name="failed_update_password">При смене пароля произошла ошибка! Попробуйте позже! Возможно нет интернета!</string>
    <string name="failed_send_sms">Вам отправлено сообщение на почту. Проверьте Ваш email!</string>
    <string name="failed_new_user">Аккаунт не создан! Проверьте введенные данные. Возможно нет интернета</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="forgot_password">Забыли свой пароль?</string>
    <string name="reset_password">Выберите какие контактные данные необходимо использовать для смены пароля:</string>
    <string name="reset_password_via_sms">Сбросить пароль через смс</string>
    <string name="reset_password_via_manual">Изменить пароль</string>
    <string name="reset_password_via_email">Сбросить пароль через email</string>
    <string name="create_a_new_password">Придумайте новый пароль для входа</string>
    <string name="choose_password_hint">Пожалуйста придумайте новый пароль и постарайтесь больше его не терять:</string>
    <string name="new_pass">Новый пароль</string>
    <string name="confirm_new_pass">Подтвердите пароль</string>
    <string name="password_reset_success">Ваш пароль успешно сброшен</string>
    <string name="enter_account">Войти в аккаунт</string>
    <string name="needed_password">Обязательно *</string>
    <string name="photo_confirm_reg3_fragment">Подтверждение вашего выбранного фото</string>
    <string name="my_current_location_reg_map_fragment">Моё местоположение:</string>
    <string name="stage_reg">Этап</string>
    <string name="stage_1_of_5">1/5</string>
    <string name="stage_2_of_5">2/5</string>
    <string name="stage_3_of_5">3/5</string>
    <string name="stage_4_of_5">4/5</string>
    <string name="stage_5_of_5">5/5</string>
    <string name="top_background_splash_screen">Задний фон Splash Screen</string>

    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="makePhoto">Добавить фото</string>
    <string name="my_car">Мой автомобиль</string>
    <string name="organisation">Организация:</string>
    <string name="org_photos">Фото организации</string>
    <string name="address">Адрес</string>
    <string name="working_time">Время работы</string>
    <string name="social">Соцсети</string>
    <string name="save_my_location">Сохранить моё местоположение</string>
    <string name="my_tel_number_profile">Мой номер телефона</string>
    <string name="my_address_profile">Мой адрес</string>
    <string name="main_forgot_pass_email_tw">Введите Ваш Email для восстановления пароля</string>
    <string name="main_forgot_email_hint">На указанную электронную почту придет ссылка для восстановления доступа к аккаунту</string>
    <string name="enter_email_reset_password">Введите вашу почту</string>
    <string name="reset_password_button">Сбросить пароль</string>
    <string name="approximate_price">Примерная цена:</string>
    <string name="bottom_sheet_service_name">Название услуги</string>
    <string name="bottom_sheet_service_overview">Описание услуги</string>
    <string name="bottom_sheet_service_price">Желаемая стоимость</string>
    <string name="bottom_sheet_service_create_request_button">Создать запрос</string>
    <string name="bottom_sheet_service_top_tw">Для того, чтобы компании увидели Ваш запрос, введите следующие данные</string>
    <string name="add_person_services_request">Добавить запрос</string>
    <string name="set_later">Установить позже</string>
    <string name="yes">Да</string>

    <string name="share_app_url">https://play.google.com/store/apps</string>
    <string name="share_app_title">Я выбираю TRIC App! Качай, не стесняйся!</string>
    <string name="share_app_body">Поделиться TRIC App: </string>
    <string name="share_app_success">Вы успешно поделились нашим приложением, спасибо!</string>
    <string name="org_announcement_cost">Стоимость:</string>
    <string name="org_announcement_id">Id:</string>

</resources>