<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_company_main"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_beginning"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_announcements"
        android:enabled="true"
        android:title="@string/organisation_announcements"
        android:icon="@drawable/ic_company_announce"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_request"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_find_client"
        android:enabled="true"
        android:title="@string/find_client"
        android:icon="@drawable/ic_find_client"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_company_more"
        android:enabled="true"
        android:title="@string/menu_more"
        android:icon="@drawable/ic_more_bottom_menu"
        app:showAsAction="ifRoom"/>
</menu>