<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/logo_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/logo_name"
        android:textColor="@color/app_name_color"
        android:textSize="40sp"
        android:fontFamily="@font/viga_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/app_name_bottom_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/logo_name_bottom"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/viga_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_textview" />

    <TextView
        android:id="@+id/login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/viga_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_bottom_textview" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_text_input_field"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:background="@drawable/main_button_background"
        android:hint="@string/email"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_textview"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_text_input_field"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:background="@drawable/main_button_background"
        android:hint="@string/password"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_input_field"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_login_button"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:background="@drawable/main_button_background"
        android:drawableStart="@drawable/google_logo"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        android:layout_marginTop="8dp"
        android:text="@string/google"
        android:textColor="@color/white"
        android:fontFamily="@font/benton_sans_medium"
        android:textSize="18sp"
        android:gravity="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_field"/>

    <TextView
        android:id="@+id/forgot_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textColor="@color/app_name_color"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/benton_sans_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_login_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/benton_sans_bold"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/login_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_textview"/>

    <TextView
        android:id="@+id/or_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/benton_sans_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_button"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:fontFamily="@font/benton_sans_bold"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/login_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_textview"/>

</androidx.constraintlayout.widget.ConstraintLayout>