<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">

    <ImageView
        android:id="@+id/back_button_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_button"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stage_notice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/back_button"
        android:fontFamily="@font/benton_sans_bold"
        android:gravity="center"
        android:text="@string/stage_2_of_5"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stage_tw"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/back_button"
        android:fontFamily="@font/benton_sans_bold"
        android:gravity="center"
        android:text="@string/stage_reg"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/stage_notice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fill_account_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/benton_sans_bold"
        android:text="@string/choose_a_photo_from_phone"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/back_button_image"
        app:layout_constraintTop_toBottomOf="@id/back_button_image" />

    <TextView
        android:id="@+id/hint_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/benton_sans_book"
        android:text="@string/hint_text_reg_step2"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/fill_account_textview"
        app:layout_constraintTop_toBottomOf="@id/fill_account_textview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gallery_photo_button"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/main_button_background"
        android:drawableTop="@drawable/ic_phone_gallery_small"
        android:gravity="center"
        android:hint="@string/photo_from_gallery"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/reg_form_color"
        android:textColorHint="@color/hint_text_color"
        app:layout_constraintEnd_toEndOf="@id/fill_account_textview"
        app:layout_constraintStart_toStartOf="@id/fill_account_textview"
        app:layout_constraintTop_toBottomOf="@id/hint_textview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/take_a_photo_button"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/main_button_background"
        android:drawableTop="@drawable/ic_take_a_photo"
        android:gravity="center"
        android:hint="@string/take_photo"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/reg_form_color"
        android:textColorHint="@color/hint_text_color"
        app:layout_constraintEnd_toEndOf="@id/fill_account_textview"
        app:layout_constraintStart_toStartOf="@id/fill_account_textview"
        app:layout_constraintTop_toBottomOf="@id/gallery_photo_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_create_account_button"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/login_button_background"
        android:fontFamily="@font/benton_sans_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>