<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">

    <ImageView
        android:id="@+id/back_button_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_button"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stage_notice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/back_button"
        android:fontFamily="@font/benton_sans_bold"
        android:gravity="center"
        android:text="@string/stage_4_of_5"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stage_tw"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/back_button"
        android:fontFamily="@font/benton_sans_bold"
        android:gravity="center"
        android:text="@string/stage_reg"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/stage_notice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_account_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/benton_sans_bold"
        android:text="@string/set_your_location"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/back_button_image"
        app:layout_constraintTop_toBottomOf="@id/back_button_image" />

    <TextView
        android:id="@+id/hint_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/benton_sans_book"
        android:text="@string/location_reg_hint"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/location_account_textview"
        app:layout_constraintTop_toBottomOf="@id/location_account_textview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_location_button"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/main_button_background"
        android:drawableTop="@drawable/ic_location"
        android:gravity="center"
        android:hint="@string/set_location"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/reg_form_color"
        android:textColorHint="@color/hint_text_color"
        app:layout_constraintEnd_toEndOf="@id/location_account_textview"
        app:layout_constraintStart_toStartOf="@id/location_account_textview"
        app:layout_constraintTop_toBottomOf="@id/hint_textview" />

    <TextView
        android:id="@+id/my_location_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/benton_sans_bold"
        android:text="@string/my_current_location_reg_map_fragment"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/location_account_textview"
        app:layout_constraintTop_toBottomOf="@+id/get_location_button" />

    <TextView
        android:id="@+id/my_location_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/benton_sans_bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/location_account_textview"
        app:layout_constraintTop_toBottomOf="@+id/my_location_textview"
        tools:text="Тут мои координаты" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/success_account_button"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/login_button_background"
        android:fontFamily="@font/benton_sans_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>